objects/tspa__Visual_History__c.object
<CustomObject>
    <fields>
        <fullName>tspa__AccountId__c</fullName>
        <label>AccountId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Agent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visual_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tspa__Agent_Type__c</fullName>
        <label>Agent Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Approved_Rejected_By__c</fullName>
        <label>Approved/Rejected By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Camera_Approved__c</fullName>
        <label>Camera Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Visual Remote Assistant Reports</relationshipLabel>
        <relationshipName>Visual_Remote_Assistant_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tspa__Client_Initially_Connected__c</fullName>
        <label>Client Initially Connected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Client_Language__c</fullName>
        <label>Client Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Client_connected_to_session__c</fullName>
        <label>Client connected to session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Customer_Number__c</fullName>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tspa__Dashboard_Connected__c</fullName>
        <label>Dashboard Connected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Desktop_Sharing_Approved__c</fullName>
        <label>Desktop Sharing Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Device_Browser__c</fullName>
        <label>Device Browser</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Device_Type__c</fullName>
        <label>Device Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Ducument_Captured__c</fullName>
        <label>Document Captured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Duration__c</fullName>
        <label>Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Image_Upload_Reason__c</fullName>
        <label>Image Upload Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Invite_Destination__c</fullName>
        <label>Invite Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Invite_Type__c</fullName>
        <label>Invite Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Video and Audio</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>Mirroring</fullName>
                </value>
                <value>
                    <fullName>Desktop Sharing</fullName>
                </value>
                <value>
                    <fullName>Observer</fullName>
                </value>
                <value>
                    <fullName>Two-way Video</fullName>
                </value>
                <value>
                    <fullName>Visual Journey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Is_Revoked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Revoked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Last_Image__c</fullName>
        <description>store visualJourneyLastImageTimestamp value</description>
        <label>Last Image</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Live_Pointer_Download__c</fullName>
        <label>Live Pointer Download</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Media_Type__c</fullName>
        <label>Media Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Observation_End_Time__c</fullName>
        <label>Observation End Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Observation_Start_Time__c</fullName>
        <label>Observation Start Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Observed_By__c</fullName>
        <label>Observed By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Offline_Meeting__c</fullName>
        <label>Offline Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Related_Record_ID__c</fullName>
        <label>Related Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SMS_Delivered__c</fullName>
        <label>SMS Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__SMS_Delivery_Time__c</fullName>
        <label>SMS Delivery Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__SMS_Prompt_Response__c</fullName>
        <label>SMS Prompt Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__SelfService_FirstImageUploadTime__c</fullName>
        <label>First Image Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__SelfService_LastImageUploadTime__c</fullName>
        <label>Last Image Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__SelfService_LinkStatus__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <label>Link Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SelfService_SentLinkCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Link Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__SelfService_SentLinkTime__c</fullName>
        <label>Link Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Date_Time__c</fullName>
        <label>Session Date &amp; Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Duration__c</fullName>
        <label>Session Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tspa__Session_Status__c</fullName>
        <label>Session Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Type__c</fullName>
        <label>Session Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Started_On_Date__c</fullName>
        <label>Started On Date</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Started_On_Time__c</fullName>
        <label>Started On Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Started_On__c</fullName>
        <label>Started On</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Status__c</fullName>
        <label>Status</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__T_C_Approved__c</fullName>
        <label>T&amp;C Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Time_to_Connect__c</fullName>
        <label>Time to Connect</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Time_to_Start__c</fullName>
        <label>Time to Start</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Total_Observation_Duration__c</fullName>
        <label>Total Observation Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__VJ_Status_Date__c</fullName>
        <label>VJ_Status_Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Video_Duration__c</fullName>
        <label>Video Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Video_Received__c</fullName>
        <label>Video Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Video_Traffic_MB__c</fullName>
        <label>Video Traffic(MB)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__action__c</fullName>
        <label>action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__alias__c</fullName>
        <label>alias</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__customerId__c</fullName>
        <label>customerId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__isSanityTestRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSanityTestRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__isVisualJourney__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVisualJourney</label>
        <type>Checkbox</type>
    </fields>
    <label>Visual Remote Assistant Reports</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__Session_Id__c</columns>
        <columns>tspa__Session_Type__c</columns>
        <columns>tspa__Invite_Type__c</columns>
        <columns>tspa__Started_On_Date__c</columns>
        <columns>tspa__Started_On__c</columns>
        <columns>tspa__Session_Date_Time__c</columns>
        <columns>tspa__Client_Language__c</columns>
        <columns>tspa__Related_Record_ID__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tspa__Self_Service_Reports</fullName>
        <columns>NAME</columns>
        <columns>tspa__Session_Type__c</columns>
        <columns>tspa__SelfService_LinkStatus__c</columns>
        <columns>tspa__Reference_ID__c</columns>
        <columns>tspa__SelfService_SentLinkTime__c</columns>
        <columns>tspa__SelfService_SentLinkCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tspa__Session_Type__c</field>
            <operation>equals</operation>
            <value>Self Service</value>
        </filters>
        <label>Self-Service Reports</label>
    </listViews>
    <nameField>
        <displayFormat>VS-{000000000}</displayFormat>
        <label>Visual History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>